--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Chess Clock</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/png" href="assets/icons/icons8-chess-clock-48.png">
+  <link rel="icon" type="image/png" href="assets/icons/chess-clock.svg">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="manifest" href="manifest.webmanifest">
