--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,11 @@
 <head>
   <meta charset="utf-8">
   <title>Chess Clock</title>
+  <meta name="description" content="Simple Chess Clock to play with your friends over the Board. Also fun with jenga.">
+  <link rel="icon" type="image/png" href="assets/icons/chess-clock.svg">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="descrption" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/png" href="assets/icons/chess-clock.svg">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
